--- a/src/main/webapp/res/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/res/bootstrap/css/bootstrap.css
@@ -3004,11 +3004,11 @@ select[multiple].input-lg {
 }
 .btn {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 4px 10px 4px;
   margin-bottom: 0;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: normal;
-  line-height: 1.42857143;
+  line-height: 18px;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
