Finalizado 99% =D Funcionando Lista com produtos =) Pendente Hospedar

--- a/src/main/webapp/res/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/res/bootstrap/css/bootstrap.css
@@ -1600,7 +1600,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 40%;
+    width: 60%;
   }
 }
 .container-fluid {
@@ -2566,6 +2566,24 @@ output {
        -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+.form-control2 {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
 .form-control:focus {
   border-color: #66afe9;
   outline: 0;
@@ -2923,6 +2941,11 @@ select[multiple].input-lg {
   .form-inline .form-control {
     display: inline-block;
     width: auto;
+    vertical-align: middle;
+  }
+  .form-inline .form-control2 {
+    display: inline-block;
+    width: 80px;
     vertical-align: middle;
   }
   .form-inline .form-control-static {
